--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name":"nTask",
+  "name": "nTask",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
-  "bower": "0.7.0",
+    "bower": "0.7.0",
     "grunt": "~0.4.0",
     "grunt-smush-components": "~0.1.1",
     "grunt-contrib-concat": "~0.1.2",
+    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jshint": "~0.3.0",
-    "grunt-tagrelease": "~0.2.0",
-    "grunt-bumpup": "~0.2.0"
+    "grunt-bumpup": "~0.2.0",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-regarde": "~0.1.1"
   }
-
 }
